--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-architect
 
 title: 我的技术笔记
-description: Road to the TECH
+description: Road to the FUTURE
 show_downloads: false
 
 encoding: UTF-8
